--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "3.1.0",
+    "material-components-web": "^7.0.0",
+    "material-design-lite": "^1.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.0"
+    "react-helmet": "^6.1.0",
+    "react-mdl": "^2.1.0",
+    "react-ripples": "^2.2.1",
+    "react-scripts": "3.4.0",
+    "react-typing-animation": "^1.6.2",
+    "react-typist": "^2.0.5",
+    "typeface-roboto": "^1.1.13",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
