--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": false,
   "homepage": "https://gkortsaridis.github.io/wellnesslab_web",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^8.1.2",
     "gh-pages": "3.1.0",
     "material-components-web": "^7.0.0",
     "material-design-lite": "^1.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-ga": "^3.1.2",
     "react-helmet": "^6.1.0",
     "react-mdl": "^2.1.0",
+    "react-parallax": "^3.1.2",
     "react-ripples": "^2.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
