--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
     "typeface-roboto": "^1.1.13",
+    "typescript": "^4.1.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
@@ -53,6 +54,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-mdl": "^1.7.27",
+    "@types/webfontloader": "^1.6.32",
     "gh-pages": "^3.1.0"
   }
 }
