Added old UI parts in each component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-components-web": "^7.0.0",
     "material-design-lite": "^1.3.0",
     "react": "^16.13.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-mdl": "^2.1.0",
@@ -25,6 +26,7 @@
     "react-scripts": "3.4.0",
     "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
+    "rmwc": "^6.1.4",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.1.3",
     "webfontloader": "^1.6.28"
