--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-mdl": "^2.1.0",
     "react-multiple-image-input": "^1.0.0",
     "react-parallax": "^3.1.2",
+    "react-parallax-hover": "^2.0.1",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
+    "react-scroll-parallax": "^2.3.5",
     "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
     "rmwc": "^6.1.4",
@@ -58,6 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-mdl": "^1.7.27",
     "@types/react-router-dom": "^5.1.6",
     "@types/webfontloader": "^1.6.32",
