--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "material-components-web": "^7.0.0",
     "material-design-lite": "^1.3.0",
     "react": "^16.8.6",
+    "react-card-flip": "^1.0.11",
     "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-mdl": "^2.1.0",
     "react-multiple-image-input": "^1.0.0",
+    "react-palette": "^1.0.2",
     "react-parallax": "^3.1.2",
     "react-parallax-hover": "^2.0.1",
     "react-ripples": "^2.2.1",
